--- a/Christmas/index.html
+++ b/Christmas/index.html
@@ -12,6 +12,7 @@
   <style>
     *{
       position: static;
+      z-index: 500;
     }
     /* body{
       background: url("./img/0008020295094258_b.jpg") no-repeat;
@@ -53,7 +54,7 @@
           margin-left: -22rem;
            font-family:arial, sans-serif; 
            font-size:3rem;
-           color: rgb(104, 100, 100);
+           color: rgb(202, 197, 197);
         }
         .zhufu strong{
           color:brown;
@@ -87,6 +88,7 @@
   <script src='js/requestAnimationFrame.js'></script>
 
   <script src="js/index.js"></script>
+  <script type="module" src="./demo.js"></script>
 
 </body>
 
