--- a/Christmas/index.html
+++ b/Christmas/index.html
@@ -88,7 +88,7 @@
   <script src='js/requestAnimationFrame.js'></script>
 
   <script src="js/index.js"></script>
-  <script src="./demo.js"></script>
+  <script type="module" src="./demo.js"></script>
 
 </body>
 
