--- a/Christmas/index.html
+++ b/Christmas/index.html
@@ -56,8 +56,11 @@
            font-size:3rem;
            color: rgb(202, 197, 197);
         }
-        .zhufu strong{
-          color:brown;
+        .zhufu span{
+          color:rgb(207, 44, 44);
+          font-weight: bold;
+          float: right;
+          font-size: 3.5rem;
         }
     </style>
 </head>
@@ -65,9 +68,8 @@
 <body>
   <div class="zhufubox clearfix">
     <div class="zhufu">
-      <p>圣诞的钟声即将响起，落叶飞舞着，温馨洋溢着，祝福伴随着，多少个不眠之夜都不及今天的平安夜来得幸福而快乐，温暖着这个不一样的夜晚。工作上的不如意或者生活中的不愉快都将它们通通抹掉，多点爱自己，才能把生活过得更加的美好。在此送上一句
-        ————
-        <strong>圣诞节快乐</strong> </p>
+      <p></p>
+      <span></span>
     </div>
   </div>
   <canvas id="text" width="500" height="100"></canvas>
@@ -86,6 +88,9 @@
   <script src='js/TweenLite.min.js'></script>
   <script src='js/easeljs-0.7.1.min.js'></script>
   <script src='js/requestAnimationFrame.js'></script>
+  <script>
+      
+  </script>
 
   <script src="js/index.js"></script>
   <script type="module" src="./demo.js"></script>
