--- a/Christmas/index.html
+++ b/Christmas/index.html
@@ -12,7 +12,7 @@
   <style>
     *{
       position: static;
-      z-index: 500;
+      /* z-index: 500; */
     }
     /* body{
       background: url("./img/0008020295094258_b.jpg") no-repeat;
@@ -22,7 +22,7 @@
       display: none;
     }
     #stage{
-      z-index: 100;
+      /* z-index: 100; */
       position: absolute;
       top: 0;
       left: 0;
@@ -62,6 +62,16 @@
           float: right;
           font-size: 3.5rem;
         }
+        .zhufu a{
+          text-decoration: none;
+          color: coral;
+          font-size: 3rem;
+          /* margin-top: 50px; */
+          position: absolute;
+          bottom: 50px;
+          opacity: 0;
+          transition: all 1s;
+        }
     </style>
 </head>
 
@@ -70,6 +80,7 @@
     <div class="zhufu">
       <p></p>
       <span></span>
+      <a href="./apple.html">戳我进入下个页面</a>
     </div>
   </div>
   <canvas id="text" width="500" height="100"></canvas>
